--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "react-hook-form": "^7.0.4",
     "react-hot-toast": "^1.0.2",
     "react-icons": "^4.2.0",
+    "react-lazy-load-image-component": "^1.5.1",
     "react-scripts": "4.0.3",
     "react-scroll": "^1.8.2",
     "web-vitals": "^1.1.1"
